Updated software testing to Eclipse-style